tests/compiletests/ui/arch/subgroup/subgroup_cluster_size_non_power_of_two_fail.stderr
error[E0080]: evaluation panicked: `ClusterSize` must be a power of 2
  --> $SYSROOT/lib/rustlib/src/rust/library/core/src/panic.rs:62:9
   |
LL |         $crate::panicking::panic_fmt($crate::const_format_args!($($t)+));
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `spirv_std::arch::subgroup_clustered_i_add::<5, u32, u32>::{constant#0}` failed here
   |
  --> crates/spirv-std/src/arch/subgroup.rs:937:0
  ::: crates/spirv-std/src/arch/subgroup.rs:954:2
   |
   = note: in this macro invocation
   |
   = note: this error originates in the macro `$crate::panic::panic_2021` which comes from the expansion of the macro `macro_subgroup_op_clustered` (in Nightly builds, run with -Z macro-backtrace for more info)

note: erroneous constant encountered
  --> crates/spirv-std/src/arch/subgroup.rs:890:12
  ::: crates/spirv-std/src/arch/subgroup.rs:954:2
   |
   = note: in this macro invocation
   |
   = note: this note originates in the macro `macro_subgroup_op_clustered` (in Nightly builds, run with -Z macro-backtrace for more info)

note: the above error was encountered while instantiating `fn subgroup_clustered_i_add::<5, u32, u32>`
  --> $DIR/subgroup_cluster_size_non_power_of_two_fail.rs:11:5
   |
LL |     spirv_std::arch::subgroup_clustered_i_add::<5, _>(value)
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
